@@ -2,7 +2,7 @@
 # AdminGenericAgent.dtl - provides HTML form for AdminGenericAgent.pm
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: AdminGenericAgent.dtl,v 1.36 2008-05-15 21:47:52 martin Exp $
+# $Id: AdminGenericAgent.dtl,v 1.37 2008-06-19 18:42:28 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -455,6 +455,14 @@
                   </td>
                   <td>
                     <textarea name="NewNoteBody" rows="7" cols="60" wrap="hard">$QData{"NewNoteBody"}</textarea>
+                  </td>
+                </tr>
+                <tr>
+                  <td valign="top">
+                    $Text{"Time units"}$Text{"$Config{"Ticket::Frontend::TimeUnits"}"}:
+                  </td>
+                  <td>
+                    <input type="text" name="NewNoteTimeUnits" value="$QData{"NewNoteTimeUnits"}" size="3"/>
                   </td>
                 </tr>
               </table>
