@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.666 2008-06-19 14:29:29 mh Exp $
+# $Id: CHANGES,v 1.667 2008-06-19 18:42:28 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,11 @@
 # --
 
 2.3.0 beta3 (2008/06/??)
+ - (2008/06/19) Added article TimeUnit support to automatically add time
+    units to ticket by using generic agent (also usable over admin
+    interface).
+ - (2008/06/19) Added CleanUp() to Kernel::System::Cache to clean up/remove
+    all cache files.
  - (2008/06/19) Fixed bug# 2957 - Merged ticket not canceled in link table.
  - (2008/06/19) Simplifed the new link mechanism.
  - (2008/06/19) Added cleanup of old cache files and cleanup of non existing
